[tool.poetry]
name = "ooliver-botbase"
version = "1.20.6"
description = "A personal nextcord bot base package for bots."
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"
repository = "https://github.com/ooliver1/botbase"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [
    {include = "botbase" },
]
readme = "README.md"

[tool.poetry.scripts]
botbase = "botbase.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = ">=0.25.0<0.26.0"
nextcord = ">=2.0.0-beta.2<3.0.0"
nextcord-ext-menus = "^1.5.2"
jishaku = "2.4.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
