[tool.poetry]
name = "ooliver-botbase"
version = "2.0.2"
description = "A personal nextcord bot base package for bots."
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"
repository = "https://github.com/ooliver1/botbase"
packages = [{ include = "botbase" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = { version = ">=0.25,<0.28", optional = true }
nextcord = "^2.0.0"
nextcord-ext-menus = "^1.5.2"
psutil = "^5.9.0"
ormar = { version = ">=0.11.0,<0.13.0", optional = true, extras = ["postgres"] }
python-dotenv = ">=0.16.0,<1.1.0"

[tool.poetry.extras]
db = ["asyncpg", "ormar"]

[tool.poetry.group.dev.dependencies]
black = ">=22.3,<24.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
