[tool.poetry]
name = "ooliver-botbase"
version = "2.0.3"
description = "A personal nextcord bot base package for bots."
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"
repository = "https://github.com/ooliver1/botbase"
packages = [{ include = "botbase" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0"
nextcord-ext-menus = "^1.5.2"
psutil = { version = "^5.9.0", platform = "linux" }
python-dotenv = ">=0.16.0,<1.1.0"
piccolo = { version = ">=0.111.1,<0.121.0", optional = true, extras = [
    "orjson",
    "uvloop",
    "postgres",
] }

[tool.poetry.extras]
db = ["piccolo"]

[tool.poetry.group.dev.dependencies]
black = ">=22.3,<24.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
